tests/should_fail/fn_too_many_args.nv
module main

// SHOULD FAIL: function called with too many arguments
fn add(x: Int, y: Int) -> Int {
    return x + y
}
println(add(1, 2, 3))
